# aadi_scout_hw

./: .env.example  README.md  gps_rtk.sh  lab_inference.py  pyproject.toml  ros_start.sh  setup.py  teleop_start.sh
LAB/: __init__.py  audio.py  azure_telemetry.py  bridge_ws.py  cameras.py  common.py  config.py  display.py  heartbeat.py  lidar.py  lights.py  local_gamepad.py  motion.py  pilot_gamepad.py  ptz.py  record.py  sensors.py  stream.py  teleop.py  udp_telemetry.py
LAB/pilot/: __init__.py  pilot_bridge.py
LAB/utils/: frame_bus.py  gps_mux.py
data_example/: data.jsonl  session.json
