[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aadi-scout-hw"
version = "0.1.0"
description = "REVO Scout LAB — Jetson-based telepresence robot controller"
requires-python = ">=3.10"

dependencies = [
    # Vision / compute
    "opencv-python>=4.8",
    "numpy>=1.24",

    # HTTP / networking
    "requests>=2.31",

    # Serial (motion controller, GPS/IMU)
    "pyserial>=3.5",

    # Daily.co WebRTC streaming
    "daily-python>=0.11",

    # ONVIF PTZ camera control
    "onvif-zeep>=0.2.12",

    # HID gamepad (local USB controller)
    "hid>=1.0.4",

    # Linux evdev gamepad (alternative input path)
    "evdev>=1.6; sys_platform == 'linux'",

    # TTS (Piper)
    "piper-tts>=1.2",

    # python-dotenv for .env loading
    "python-dotenv>=1.0",
]


# GStreamer python bindings are system-level (apt: python3-gi gir1.2-gst-1.0)
# and cannot be pip-installed. Install on Jetson with:
#   sudo apt install python3-gi gir1.2-gstreamer-1.0 gstreamer1.0-tools \
#                    gstreamer1.0-plugins-base gstreamer1.0-plugins-good

[tool.setuptools.packages.find]
where = ["."]
include = ["LAB*"]
